--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -11,28 +11,52 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/POCHI.png" alt="" />
-                    <div class="heading-title">
-                        <h2>Who Are We?</h2>
+{#                    <img class="float-left" src="/static/img/FIMCO-WEBSITE-LOGOS.png" height="250" width="250" alt="" />#}
+                    <div class="heading-title" id="about">
+                        <h2>About Us</h2>
                     </div>
-                    <p>Lorem ipsum dolor sit amet tempus malesuada. Suspendisse in dui. Ut elit metus, quis consectetuer
-                        congue augue quis erat. Quisque pretium eu, aliquam odio. Donec a pellentesque consectetuer,
-                        augue nec odio. Nam accumsan at, porttitor sem at porttitor laoreet viverra mattis.
-                        Aliquam ultricies accumsan. In tempus. Pellentesque felis.
+                    <p>
+                        FIMCO is a Financial Investment Management Company that seeks offer professional assistance to
+                        clients looking to navigate Tanzanian ﬁnancial markets across various asset classes.
                     </p>
-                    <p>Aliquam nisl. Nunc condimentum wisi. Aenean nonummy risus at eros. Suspendisse congue odio at
-                        purus. Quisque eu justo. Quisque eu eros. Sed accumsan dictum, laoreet sit amet ante.
-                        Curabitur ultrices iaculis. In gravida eros in consequat diam. Donec nonummy, tellus in lorem
-                        lorem pretium magna. In hac habitasse platea dictumst. Suspendisse elit eu scelerisque a,
-                        gravida vel, purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos hymenaeos.
+                    <p>
+                        After working in commercial banks for over 25 years combined FIMCO founders and directors
+                        have been driven with the need to spread financial market literacy and capabilities by
+                        informing, advising and executing investments with and for clients.
                     </p>
-                    <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo a
-                            sodales sed, dignissim pretium nunc.
-                        </p>
-                        <cite>Anonymous</cite>
-                    </blockquote>
+                    <p class="more-content">
+                        This assistance through offering relevant information, advisory or execution capabilities
+                        is underpinned by the deep understanding of local market dynamics and core values committed to
+                        Diligence, Integrity and Innovation in all we do. We are looking to introduce local and foreign
+                        investors to the Tanzanian Financial markets opportunities, and indeed vice versa. We do so
+                        leveraging years of experience working with international banks in Tanzanian and a rich track
+                        record of engaging with clients and regulators alike. Whether it’s to sell or hold; we work hard
+                        to give our clients sufficient confidence to make this decision across various asset classes.
+                    </p>
+                    <div class="col-md-3">
+                        <a class="tp-caption WebProduct-Button read-more-show"
+                            href="#"
+                            data-x="['left','left','left','left']" data-hoffset="['30','30','200','79']"
+                            data-y="['middle','middle','top','top']" data-voffset="['268','268','456','430']"
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-transform_idle="o:1;"
+                            data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"
+                            data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(0, 42, 84, 1.00);"
+
+                            data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;"
+                            data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"
+                            data-start="1750"
+                            data-splitin="none"
+                            data-splitout="none"
+                            data-actions=''
+                            data-responsive_offset="on"
+                            data-responsive="off"
+
+                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">LEARN MORE
+                        </a>
+                    </div>
                 </div>
                 <!-- /LEFT -->
 
@@ -46,18 +70,28 @@
                         <ul class="list-unstyled list-icons p-15 pb-0">
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Choice</span>
-                                <small>Whatever your needs, experience and appetite for risk, we have an investment opportunity to suit you</small>
+                                <span class="block bold fs-18">We Inform</span>
+                                <small>
+                                    We watch markets intently and intuitively and are able to relay the relevant
+                                    information to clients assisting in decision making prior to purchase/sell of an asset.
+                                </small>
                             </li>
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Expertise</span>
-                                <small>We combine financial expertise with ground-breaking technology to make investing smarter and easier</small>
+                                <span class="block bold fs-18">We Advice</span>
+                                <small>
+                                    Be it for corporate treasury operations, government entities, foreign investors or
+                                    individuals we interact with our client and devise best course of action for them to
+                                    assume risk in the market.
+                                </small>
                             </li>
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">Simplicity</span>
-                                <small>Our investment platforms are designed to be simple and intuitive, our language clear and straightforward</small>
+                                <span class="block bold fs-18">We execute</span>
+                                <small>
+                                    Across various asset classes we execute orders by seeking out liquidity in a
+                                    transparent and affordable manner.
+                                </small>
                             </li>
                         </ul>
                         <hr />
@@ -121,16 +155,16 @@
                 <div class="col-sm-6" id="mission">
                     <div class="heading-title heading-border-bottom heading-color">
                         <h3>Our Mission</h3>
-                        <p>we always complete our missions</p>
+{#                        <p>we always complete our missions</p>#}
                     </div>
                     <p>Being the most trusted gateway to experiencing TZ financial markets offering Information, advise
                         and execution capabilities across all asset classes leveraging innovating channels.
                     </p>
                 </div>
-                <div class="col-sm-6" id="section2">
+                <div class="col-sm-6" id="vision">
                     <div class="heading-title heading-border-bottom heading-color">
                         <h3>Our Vision</h3>
-                        <p>our experience is all you need</p>
+{#                        <p>our experience is all you need</p>#}
                     </div>
                     <p>Revolutionize the approach, mentality and propensity of investment/savings by leveraging innovative platforms and enhancing financial literacy.</p>
                 </div>
@@ -388,9 +422,6 @@
     </section>
 {% endblock %}
 
-{#{% block scripts %}#}
-{#    <script type="text/javascript" src="static/js/vendors/slick.min.js"></script>#}
-{#    <script type="text/javascript" src="static/js/vendors/scrolloverflow.min.js"></script>#}
-{#	<script type="text/javascript" src="static/js/vendors/jquery.fullPage.min.js"></script>#}
-{#    <script type="text/javascript" src="static/js/about.js"></script>#}
-{#{% endblock %}#}
+{% block scripts %}
+    <script type="text/javascript" src="static/js/about.js"></script>
+{% endblock %}
