--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -71,3 +71,47 @@ ul.process-steps li a.active, ul.process-steps li a.active:focus, ul.process-ste
 .nav-tabs>li>a.active {
     color: #002A54 !important;
 }
+
+#topMain ul li a {
+	text-transform:capitalize;
+}
+
+.WebProduct-Content {
+    min-width: 448px;
+    max-width: 448px;
+    font-size: 20px !important;
+    font-weight: 100 !important;
+    line-height: 1.3 !important;
+}
+
+.WebProduct-SubTitle {
+    line-height: 1.3 !important;
+    letter-spacing:2px !important;
+    font-size: 21px !important;
+}
+
+#slide-227-layer-9{
+    z-index: 13;
+}
+
+#slide-228-layer-9 {
+    z-index: 10;
+    letter-spacing:2px;
+}
+
+#slide-229-layer-9 {
+    z-index: 9;
+    letter-spacing:2px;
+}
+
+#slide-230-layer-9 {
+    z-index: 8;
+}
+
+#slide-227-layer-10 {
+    z-index: 12;
+}
+
+#slide-230-layer-10 {
+    z-index: 7;
+}
