still issues in corporate profile and statement in pochi

--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -142,7 +142,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <section id="middle" style="background-color: #ebebeb">
+    <section id="middle">
         <div id="content" class="padding-20">
             <div class="panel panel-default">
                 <div class="panel-heading panel-heading-transparent">
