--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -7,7 +7,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 offset-md-4">
+                <div class="col-lg-4 col-lg-4 col-md-6 offset-md-3 col-sm-12">
                     {% if messages %}
                         {% for message in messages %}
                             <!-- ALERT -->
@@ -65,7 +65,7 @@
                                         <a class="no-text-decoration fs-13 mt-10 block" href="#">Forgot Password?</a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-sm-6 col-xs-6 text-right">
+                                <div class="col-md-6 col-sm-6 col-xs-6">
                                     <button class="btn btn-primary" type="submit">OK, LOG IN</button>
                                     <input type="hidden" name="next" value="{{ next }}" />
                                 </div>
