--- a/fimco/pochi/templates/pochi/pochi2pochi.html
+++ b/fimco/pochi/templates/pochi/pochi2pochi.html
@@ -1,6 +1,6 @@
 {% extends "pochi/main.html" %}
 {% block content %}
-    <section id="middle" style="background-color: #ebebeb">
+    <section id="middle">
         <div id="content" class="padding-20">
             <div class="row">
                 <div class="col-lg-6">
