--- a/fimco/pochi/templates/pochi/statement.html
+++ b/fimco/pochi/templates/pochi/statement.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" />
 {% endblock %}
 {% block content %}
-    <section id="middle" style="background-color: #ebebeb">
+    <section id="middle">
         <!-- page title -->
         <header id="page-header">
             <h1>{{ user.get_short_name }} Statement</h1>
